osd: compute OSD's space usage ratio via raw space utilization

Fixes: https://tracker.ceph.com/issues/50533

Signed-off-by: Igor Fedotov <ifedotov@suse.com>
(cherry picked from commit 81c4d82be02ee14aff2849b3025a5dea6cb0327e)